# quote_of_the_day

./: CMakeLists.txt  README.md
include/: client_socket.h  server.h
src/: client_socket.cpp  echo.cpp  qotd.cpp  server.cpp
